# AI-CanvasPro

./: .gitignore  .vercelignore  .windsurfrules  CORS修复说明.md  dev.bat  dev.ps1  fix_button_text.cjs  fix_components_css.cjs  fix_dark_css.cjs  fix_overlays.cjs  fix_remnants.cjs  force_white_text.cjs  index.html  package-lock.json  package.json  preview-settings.html  refactor_css.cjs  start-dev.cmd  tsconfig.json  tsconfig.node.json  vite.config.ts  打包软件.cmd  本地磁盘 (D).lnk  运行软件.cmd
.github/workflows/: gh-pages.yml  release.yml
.reasonix/truncated-results/: 1780132890361-28eef6e5-run_command.txt  1780132911082-b39d5d40-run_command.txt
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ScriptEditorModal.module.css  ScriptEditorModal.tsx
src/components/common/: FullscreenPromptEditor.tsx  LazyImage.tsx  LazyVideoThumbnail.tsx  (+1 more)
src/pages/: AICharacter.module.css  AICharacter.tsx  CharacterLibrary.module.css  CharacterLibrary.tsx  ComicVideoStudio.tsx  ProjectList.module.css  ProjectList.tsx  PromptTemplates.module.css  PromptTemplates.tsx  Settings.module.css  Settings.tsx  StyleLibrary.module.css  StyleLibrary.tsx  Workspace.module.css  Workspace.tsx
src/services/: aiService.ts  database.ts  mediaService.ts  secureStorage.ts  updateService.ts
src/store/: projectStore.ts  themeStore.ts
src/styles/: index.css
src/types/: index.ts
src/utils/: antdApp.tsx  audioUtils.ts  downloadHelper.ts  imageUtils.ts  scenePrompt.ts
(+13 files in other folders)
